--- a/startbootstrap-freelancer-master/css/freelancer.css
+++ b/startbootstrap-freelancer-master/css/freelancer.css
@@ -19,12 +19,12 @@
   --orange: #fd7e14;
   --yellow: #ffc107;
   --green: #28a745;
-  --teal: #1abc9c;
+  --teal: #3C99DC;
   --cyan: #17a2b8;
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #1abc9c;
+  --primary: #3C99DC;
   --secondary: #2c3e50;
   --success: #28a745;
   --info: #17a2b8;
@@ -90,9 +90,7 @@ p {
   margin-top: 0;
   margin-bottom: 1rem;
 }
-.profile-pic {
-  border-radius: 50px;
-}
+
 abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
@@ -163,13 +161,13 @@ sup {
 }
 
 a {
-  color: #1abc9c;
+  color: #3C99DC;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #117964;
+  color: #1f71ad;
   text-decoration: underline;
 }
 
@@ -401,7 +399,6 @@ h5, .h5 {
 h6, .h6 {
   font-size: 1rem;
 }
-
 
 .lead {
   font-size: 1.25rem;
@@ -1730,23 +1727,23 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #bfece3;
+  background-color: #c8e2f5;
 }
 
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #88dccc;
+  border-color: #9acaed;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #abe6da;
+  background-color: #b2d7f1;
 }
 
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #abe6da;
+  background-color: #b2d7f1;
 }
 
 .table-secondary,
@@ -2047,10 +2044,10 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #6bebd1;
+  border-color: #a8d2ef;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
-  box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2603,8 +2600,8 @@ textarea.form-control {
 
 .btn:focus, .btn.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
-  box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
 }
 
 .btn.disabled, .btn:disabled {
@@ -2618,38 +2615,38 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
+  background-color: #3C99DC;
+  border-color: #3C99DC;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #159a80;
-  border-color: #148f77;
+  background-color: #2587cd;
+  border-color: #237fc2;
 }
 
 .btn-primary:focus, .btn-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(60, 198, 171, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(60, 198, 171, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(89, 168, 225, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(89, 168, 225, 0.5);
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
+  background-color: #3C99DC;
+  border-color: #3C99DC;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #148f77;
-  border-color: #12846e;
+  background-color: #237fc2;
+  border-color: #2178b7;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(60, 198, 171, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(60, 198, 171, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(89, 168, 225, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(89, 168, 225, 0.5);
 }
 
 .btn-secondary {
@@ -2905,37 +2902,37 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #1abc9c;
-  border-color: #1abc9c;
+  color: #3C99DC;
+  border-color: #3C99DC;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
+  background-color: #3C99DC;
+  border-color: #3C99DC;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.5);
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #1abc9c;
+  color: #3C99DC;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
+  background-color: #3C99DC;
+  border-color: #3C99DC;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.5);
 }
 
 .btn-outline-secondary {
@@ -3178,12 +3175,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #1abc9c;
+  color: #3C99DC;
   text-decoration: none;
 }
 
 .btn-link:hover {
-  color: #117964;
+  color: #1f71ad;
   text-decoration: underline;
 }
 
@@ -3482,7 +3479,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #1abc9c;
+  background-color: #3C99DC;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -3870,23 +3867,23 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #1abc9c;
-  background-color: #1abc9c;
+  border-color: #3C99DC;
+  background-color: #3C99DC;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
-  box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #6bebd1;
+  border-color: #a8d2ef;
 }
 
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: #98f1df;
-  border-color: #98f1df;
+  background-color: #d3e8f7;
+  border-color: #d3e8f7;
 }
 
 .custom-control-input:disabled ~ .custom-control-label {
@@ -3936,8 +3933,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #1abc9c;
-  background-color: #1abc9c;
+  border-color: #3C99DC;
+  background-color: #3C99DC;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -3945,11 +3942,11 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(26, 188, 156, 0.5);
+  background-color: rgba(60, 153, 220, 0.5);
 }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(26, 188, 156, 0.5);
+  background-color: rgba(60, 153, 220, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -3961,7 +3958,7 @@ input[type="button"].btn-block {
 }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(26, 188, 156, 0.5);
+  background-color: rgba(60, 153, 220, 0.5);
 }
 
 .custom-switch {
@@ -4002,7 +3999,7 @@ input[type="button"].btn-block {
 }
 
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(26, 188, 156, 0.5);
+  background-color: rgba(60, 153, 220, 0.5);
 }
 
 .custom-select {
@@ -4025,10 +4022,10 @@ input[type="button"].btn-block {
 }
 
 .custom-select:focus {
-  border-color: #6bebd1;
+  border-color: #a8d2ef;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
-  box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
 }
 
 .custom-select:focus::-ms-value {
@@ -4085,9 +4082,9 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #6bebd1;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
-  box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
+  border-color: #a8d2ef;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
 }
 
 .custom-file-input:disabled ~ .custom-file-label {
@@ -4150,16 +4147,16 @@ input[type="button"].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4170,7 +4167,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #1abc9c;
+  background-color: #3C99DC;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4189,7 +4186,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-webkit-slider-thumb:active {
-  background-color: #98f1df;
+  background-color: #d3e8f7;
 }
 
 .custom-range::-webkit-slider-runnable-track {
@@ -4205,7 +4202,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #1abc9c;
+  background-color: #3C99DC;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4224,7 +4221,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-moz-range-thumb:active {
-  background-color: #98f1df;
+  background-color: #d3e8f7;
 }
 
 .custom-range::-moz-range-track {
@@ -4243,7 +4240,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #1abc9c;
+  background-color: #3C99DC;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4261,7 +4258,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-ms-thumb:active {
-  background-color: #98f1df;
+  background-color: #d3e8f7;
 }
 
 .custom-range::-ms-track {
@@ -4393,7 +4390,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #1abc9c;
+  background-color: #3C99DC;
 }
 
 .nav-fill .nav-item {
@@ -5186,14 +5183,14 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -0.125rem;
   line-height: 1.25;
-  color: #1abc9c;
+  color: #3C99DC;
   background-color: #fff;
   border: 0.125rem solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #117964;
+  color: #1f71ad;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -5202,8 +5199,8 @@ input[type="button"].btn-block {
 .page-link:focus {
   z-index: 2;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
-  box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -5220,8 +5217,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
+  background-color: #3C99DC;
+  border-color: #3C99DC;
 }
 
 .page-item.disabled .page-link {
@@ -5308,18 +5305,18 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #1abc9c;
+  background-color: #3C99DC;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
-  background-color: #148f77;
+  background-color: #237fc2;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(26, 188, 156, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(60, 153, 220, 0.5);
 }
 
 .badge-secondary {
@@ -5482,17 +5479,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #0e6251;
-  background-color: #d1f2eb;
-  border-color: #bfece3;
+  color: #1f5072;
+  background-color: #d8ebf8;
+  border-color: #c8e2f5;
 }
 
 .alert-primary hr {
-  border-top-color: #abe6da;
+  border-top-color: #b2d7f1;
 }
 
 .alert-primary .alert-link {
-  color: #08352c;
+  color: #14344a;
 }
 
 .alert-secondary {
@@ -5636,7 +5633,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #1abc9c;
+  background-color: #3C99DC;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -5739,8 +5736,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
+  background-color: #3C99DC;
+  border-color: #3C99DC;
 }
 
 .list-group-horizontal {
@@ -5884,19 +5881,19 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #0e6251;
-  background-color: #bfece3;
+  color: #1f5072;
+  background-color: #c8e2f5;
 }
 
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #0e6251;
-  background-color: #abe6da;
+  color: #1f5072;
+  background-color: #b2d7f1;
 }
 
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #0e6251;
-  border-color: #0e6251;
+  background-color: #1f5072;
+  border-color: #1f5072;
 }
 
 .list-group-item-secondary {
@@ -6919,13 +6916,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #1abc9c !important;
+  background-color: #3C99DC !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #148f77 !important;
+  background-color: #237fc2 !important;
 }
 
 .bg-secondary {
@@ -7047,7 +7044,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #1abc9c !important;
+  border-color: #3C99DC !important;
 }
 
 .border-secondary {
@@ -10376,11 +10373,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #1abc9c !important;
+  color: #3C99DC !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #117964 !important;
+  color: #1f71ad !important;
 }
 
 .text-secondary {
@@ -10679,7 +10676,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-  color: #1abc9c;
+  color: #3C99DC;
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
@@ -10687,7 +10684,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link.active {
-  color: #1abc9c;
+  color: #3C99DC;
 }
 
 #mainNav .navbar-toggler {
@@ -10712,11 +10709,11 @@ a.text-dark:hover, a.text-dark:focus {
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
     color: #fff;
-    background: #1abc9c;
+    background: #3C99DC;
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
     color: #fff;
-    background: #1abc9c;
+    background: #3C99DC;
   }
   #mainNav.navbar-shrink {
     padding-top: 0.5rem;
@@ -10780,7 +10777,7 @@ a.text-dark:hover, a.text-dark:focus {
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   opacity: 0;
-  background-color: rgba(26, 188, 156, 0.9);
+  background-color: rgba(60, 153, 220, 0.9);
 }
 
 .portfolio .portfolio-item .portfolio-item-caption:hover {
@@ -10810,7 +10807,7 @@ a.text-dark:hover, a.text-dark:focus {
   top: 1rem;
   font-size: 3rem;
   line-height: 3rem;
-  color: #1abc9c;
+  color: #3C99DC;
   opacity: 1;
 }
 
@@ -10860,7 +10857,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .floating-label-form-group-with-focus label {
-  color: #1abc9c;
+  color: #3C99DC;
 }
 
 form .row:first-child .floating-label-form-group {
